crates/cli/tests/snapshots/cli_output_snapshots__cli_device_missing_subcommand.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stderr
---
Device management commands

Usage: wheelctl device [OPTIONS] <COMMAND>

Commands:
  list       List all connected devices
  status     Show device status and telemetry
  calibrate  Calibrate device (center, DOR, pedals)
  reset      Reset device to safe state
  help       Print this message or the help of the given subcommand(s)

Options:
      --json                 Output in JSON format for machine parsing
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
