crates/cli/tests/snapshots/cli_output_snapshots__cli_hardware_doctor_help.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stdout
---
Inspect local hardware/tooling readiness without opening devices or sending writes

Usage: wheelctl hardware doctor [OPTIONS]

Options:
      --json                 Output in JSON format for machine parsing
      --json-out <JSON_OUT>  Write the hardware doctor receipt to this JSON file
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
