crates/cli/tests/snapshots/cli_output_snapshots__cli_health_help.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stdout
---
Service health and status

Usage: wheelctl health [OPTIONS]

Options:
      --json                 Output in JSON format for machine parsing
  -w, --watch                Watch health events in real-time
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
