crates/cli/tests/snapshots/cli_output_snapshots__cli_help_text.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stdout
---
wheelctl is a command-line interface for the Racing Wheel Software Suite.
It provides comprehensive control over racing wheel hardware, profile management,
diagnostics, and game integration features.

All write operations available in the UI are also available through this CLI.
Use --json flag for machine-readable output suitable for scripting.


Usage: wheelctl [OPTIONS] <COMMAND>

Commands:
  device          Device management commands
  controls        Observe-only control-stream diagnostics, capture, and replay
  profile         Profile management commands
  plugin          Plugin management commands
  diag            Diagnostic and monitoring commands
  game            Game integration commands
  telemetry       Telemetry probe and capture commands
  hardware        Hardware environment diagnostics
  moza            Safe Moza HID probe and capture commands
  safety          Safety and control commands
  support-bundle  Generate diagnostic support bundle
  completion      Generate shell completion scripts
  health          Service health and status
  help            Print this message or the help of the given subcommand(s)

Options:
      --json
          Output in JSON format for machine parsing

  -v, --verbose...
          Verbose logging

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
